--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   google_sign_in: "^4.5.1"
   sleek_circular_slider: ^1.1.0
+  multi_select_flutter: ^3.1.6
   intl: ^0.16.1
 
 dev_dependencies:
