--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sleek_circular_slider: ^1.1.0
   multi_select_flutter: ^3.1.6
   intl: ^0.16.1
+  socket_io_client: ^0.9.12
 
 dev_dependencies:
   flutter_test:
