--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   multi_select_flutter: ^3.1.6
   intl: ^0.16.1
   socket_io_client: ^0.9.12
+  flutter_facebook_auth: ^1.0.0
 
 dev_dependencies:
   flutter_test:
